# slowpool

./: README.rst  pyproject.toml
examples/: example1.py
slowpool/: __init__.py  aio.py
tests/: bar.py  foo.py
