[tool.poetry]
name = "slowpool"
version = "0.1.1"
description = ""
authors = ["Aaron Christianson <ninjaaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
libaaron = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
